--- a/src/scss/blocks/_starting-section.scss
+++ b/src/scss/blocks/_starting-section.scss
@@ -7,40 +7,39 @@
 
 
 header {
-  @extend %flex-between;
-  @include color-and-weight($gray, $medium);
   font-size: calcFluidFontSize(14, $font-M, 320, 1920);
   margin-top: 60px;
   flex-wrap: wrap;
   flex-direction: column;
 
-
+  @include color-and-weight($gray, $medium);
   @include media(tablet) {
     flex-wrap: nowrap;
     flex-direction: row;
   }
-
   @include media(large-desktop) {
     flex-wrap: nowrap;
     flex-direction: row;
   }
+
+  @extend %flex-between;
 }
 
 .logo {
   cursor: pointer;
-  @include color-and-weight($purple, $extra-bold);
   font-size: calcFluidFontSize($font-logo, $font-logo, 320, 1920);
-  display: flex;
-  align-items: center;
   text-transform: uppercase;
+
+  @include color-and-weight($purple, $extra-bold);
+  @include media(mobile) {
+    justify-content: flex-start;
+  }
+
+  @extend %flex-center;
+
 }
 
 .navbar {
-  @extend %flex;
-  flex-direction: column;
-  margin: 20px 0px;
-  width: 100%;
-
   @include media(mobile) {
     justify-content: space-between;
     flex-wrap: nowrap;
@@ -57,17 +56,23 @@ header {
     justify-content: space-around;
   }
 
+  @extend %flex;
+  flex-direction: column;
+  margin: 20px 0px;
+  width: 100%;
+
   &__item {
     cursor: pointer;
     transition: .3s;
 
     &::after {
-      @include size(20px, 3px);
       content: '';
       display: block;
       border-radius: 50px;
       transition: .5s;
       background-color: $purple;
+
+      @include size(20px, 3px);
     }
 
     &:hover::after {
@@ -78,12 +83,13 @@ header {
 }
 
 .contact-us {
-  @include size(200px, 50px);
-  @extend %flex-center;
-
   cursor: pointer;
   background-color: $white;
   transition: .3s;
+
+  @include size(200px, 50px);
+
+  @extend %flex-center;
 
   &:hover {
     transition: .3s;
@@ -94,21 +100,24 @@ header {
 .main-info {
   margin-top: 100px;
 
-  &__title {
-    @include color-and-weight($black, $extra-bold);
-    font-size: calcFluidFontSize(25, $font-XL, 320, 1920);
-  }
-
-  &__subtitle {
-    @include color-and-weight($gray, bold);
-    font-size: calcFluidFontSize(15, $font-L, 320, 1920);
-  }
-
   @include media(tablet) {
-
   }
   @include media(large-desktop) {
     margin-top: 360px;
+  }
+
+  &__title {
+    font-size: calcFluidFontSize(25, $font-XL, 320, 1920);
+
+    @include color-and-weight($black, $extra-bold);
+
+  }
+
+  &__subtitle {
+    font-size: calcFluidFontSize(15, $font-L, 320, 1920);
+
+    @include color-and-weight($gray, bold);
+
   }
 }
 
@@ -117,33 +126,37 @@ header {
   width: 100%;
   max-width: 650px;
   margin-bottom: 200px;
+
   @include media(small-tablet) {
     display: flex;
   }
 
   &__input {
-    @include color-and-weight($black, $regular);
     font-size: calcFluidFontSize(14, $font-M, 320, 1920);
-    @extend %flex-center;
     width: 100%;
     height: 70px;
     background-color: $white;
     transition: .3s;
     padding-left: 20px;
     margin-bottom: 20px;
+
+    @include color-and-weight($black, $regular);
+
+    @extend %flex-center;
   }
 
   &__button {
-    @extend %flex-center;
-    @include color-and-weight($white, $medium);
-    @include size(200px, 70px);
-
     cursor: pointer;
     transition: .3s;
     font-size: calcFluidFontSize(14, $font-M, 320, 1920);
     margin: 0 auto;
     background-color: $purple;
     color: $white;
+
+    @extend %flex-center;
+
+    @include color-and-weight($white, $medium);
+    @include size(200px, 70px);
 
     &:hover {
       transition: .3s;
